--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
     </head>
     <body>
         <div class="container">
-            <div class="col-xs-3">
-                <h1>Zach Leach</h1>
-                <p>Product Designer
-                <br>San Francisco 
-                </p>
-                <p><a href="mailto:zleach@mac.com">zleach@mac.com</a><br>
-                <a href="http://twitter.com/thisiszach">@thisiszach</a></p>
+            <div class="col-md-3">
+                <div class="affix">
+                    <div class="me"></div>
+                    <h1>Zach Leach</h1>
+                    <p>Product Designer
+                    <br>San Francisco 
+                    </p>
+                    <p><a href="mailto:zleach@mac.com">zleach@mac.com</a><br>
+                    <a href="http://twitter.com/thisiszach">@thisiszach</a></p>
+                </div>
+                <div class="hidden-lg"><br><br></div>
             </div>
-            <div class="col-sm-9">
+            <div class="col-md-9 works">
                 <h2>Inkling
                 <span class="label label-default pull-right">Product Design</span>
                 <span class="label label-default pull-right">UX Design</span>
@@ -32,6 +36,26 @@
                 <p>Create. Share. Manage. Inkling is a cloud publishing platform where you can create beautiful, interactive content and share it securely with customers, employees, or partners, across all devices, anywhere in the world.</p>
                 <p><a href="http://inkling.com">http://inkling.com</a></p>                
                 <div class="row">
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail inkling-1"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail inkling-2"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail inkling-3"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail inkling-4"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <h2>
@@ -71,7 +95,7 @@
                 <span class="label label-default pull-right">Product Design</span>
                 </h2>
                 <p>The best way to get your site up and running, fast. Cursive creates a beautiful website for your local business or restaurant, you'll get a modern beautiful website that's generated automatically.
-                <p><a href="#">http://getcursive.com</a></p>
+                <p><a href="http://getcursive.com">http://getcursive.com</a></p>
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
@@ -110,7 +134,8 @@
                 <span class="label label-default pull-right">Objective-C</span>
                 <span class="label label-default pull-right">Mobile Design</span>                    
                 </h2>
-                <p>Pushpin is the best way to discover great places. With 31 million places worldwide – from restaurants to bars to coffee to shops to the great outdoors – you'll never run out of new places. With a quick double tap, you can like places instantly – or, press and hold to pin a place and save it for later.</p><p><a href="#">Available on the App Store</a></p>
+                <p>Pushpin is the best way to discover great places. With 31 million places worldwide – from restaurants to bars to coffee to shops to the great outdoors – you'll never run out of new places. With a quick double tap, you can like places instantly – or, press and hold to pin a place and save it for later.</p>
+                <p><a href="https://itunes.apple.com/us/app/pushpin-find-great-restaurants/id713800414?mt=8">Available on the App Store</a></p>
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
@@ -154,19 +179,36 @@
                 Apple - iTunes
                 <span class="label label-default pull-right">UI Engineer</span>
                 <span class="label label-default pull-right">Web Development</span>
-                </h2>                    
+                </h2>
+                <p>The world’s #1 music store and app store. Millions of songs. Thousands of movies to buy or rent. Your favorite TV shows. Hundreds of thousands of apps, games, and podcasts.</p>
+                <p><a href="http://www.apple.com/itunes/">http://www.apple.com/itunes/</a></p>
+      
                 <div class="row">
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail itunes-1"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail itunes-2"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail itunes-3"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 item">
+                        <div class="wrapper">
+                            <div class="thumbnail itunes-4"></div>
+                        </div>
+                    </div>
                 </div>
-
-
-                <h2>
-                Apple - Retail Service
-                <span class="label label-default pull-right">UX Design</span>
-                </h2>                    
-                <div class="row">
-                </div>
-
-                
+                <hr>
+                <p>
+                    <span class="sosumi">It's relentless, invisible, indefatigable, indisputable, undeniable.</span>
+                </p>
             </div>
         </div>
 
