--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                             data-fresco-group='inkling'>
                                 <div class="thumbnail inkling-1" data></div>
                             </a>
-
                         </div>
                     </div>
                     <div class="col-xs-3 item">
@@ -87,22 +86,38 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail hoody-1"></div>
+                            <a href='img/hoody-1-large.png' 
+                            class='fresco' 
+                            data-fresco-group='hoody'>
+                                <div class="thumbnail hoody-1"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail hoody-2"></div>
+                            <a href='img/hoody-2-large.png' 
+                            class='fresco' 
+                            data-fresco-group='hoody'>
+                                <div class="thumbnail hoody-2"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail hoody-3"></div>
+                            <a href='img/hoody-3-large.png' 
+                            class='fresco' 
+                            data-fresco-group='hoody'>
+                                <div class="thumbnail hoody-3"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail hoody-4"></div>
+                            <a href='img/hoody-4-large.png' 
+                            class='fresco' 
+                            data-fresco-group='hoody'>
+                                <div class="thumbnail hoody-4"></div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -119,32 +134,56 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail cursive-1"></div>
+                            <a href='img/cursive-1-large.png' 
+                            class='fresco' 
+                            data-fresco-group='cursive'>
+                                <div class="thumbnail cursive-1"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail cursive-2"></div>
+                            <a href='img/cursive-2-large.png' 
+                            class='fresco' 
+                            data-fresco-group='cursive'>
+                                <div class="thumbnail cursive-2"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail cursive-5"></div>
+                            <a href='img/cursive-5-large.png' 
+                            class='fresco' 
+                            data-fresco-group='cursive'>
+                                <div class="thumbnail cursive-5"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail cursive-6"></div>
+                            <a href='img/cursive-6-large.png' 
+                            class='fresco' 
+                            data-fresco-group='cursive'>
+                                <div class="thumbnail cursive-6"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail cursive-3"></div>
+                            <a href='img/cursive-3-large.png' 
+                            class='fresco' 
+                            data-fresco-group='cursive'>
+                                <div class="thumbnail cursive-3"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail cursive-4"></div>
+                            <a href='img/cursive-4-large.png' 
+                            class='fresco' 
+                            data-fresco-group='cursive'>
+                                <div class="thumbnail cursive-4"></div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -159,37 +198,65 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-1"></div>
+                            <a href='img/pushpin-1-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-1"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-2"></div>
+                            <a href='img/pushpin-2-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-2"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-3"></div>
+                            <a href='img/pushpin-3-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-3"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-4"></div>
+                            <a href='img/pushpin-4-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-4"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-5"></div>
+                            <a href='img/pushpin-5-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-5"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-6"></div>
+                            <a href='img/pushpin-6-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-6"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail pushpin-7"></div>
+                            <a href='img/pushpin-7-large.png' 
+                            class='fresco' 
+                            data-fresco-group='pushpin'>
+                                <div class="thumbnail pushpin-7"></div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -206,22 +273,39 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail itunes-1"></div>
+                            <a href='img/itunes-1-large.png' 
+                            class='fresco' 
+                            data-fresco-group='itunes'>
+                                <div class="thumbnail itunes-1"></div>
+                            </a>
+
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail itunes-2"></div>
+                            <a href='img/itunes-2-large.png' 
+                            class='fresco' 
+                            data-fresco-group='itunes'>
+                                <div class="thumbnail itunes-2"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail itunes-3"></div>
+                            <a href='img/itunes-3.jpg' 
+                            class='fresco' 
+                            data-fresco-group='itunes'>
+                                <div class="thumbnail itunes-3"></div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <div class="thumbnail itunes-4"></div>
+                            <a href='img/itunes-4-large.png' 
+                            class='fresco' 
+                            data-fresco-group='itunes'>
+                                <div class="thumbnail itunes-4"></div>
+                            </a>
                         </div>
                     </div>
                 </div>
