--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/inkling-1-large.png' 
+                            <a href='img/inkling-1-large.jpg' 
                             class='fresco' 
                             data-fresco-group='inkling'>
                                 <div class="thumbnail inkling-1" data></div>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/inkling-3-large.png' 
+                            <a href='img/inkling-3-large.jpg' 
                             class='fresco' 
                             data-fresco-group='inkling'>
                             <div class="thumbnail inkling-3"></div>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/inkling-4-large.png' 
+                            <a href='img/inkling-4-large.jpg' 
                             class='fresco' 
                             data-fresco-group='inkling'>
                             <div class="thumbnail inkling-4"></div>
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/hoody-1-large.png' 
+                            <a href='img/hoody-1-large.jpg' 
                             class='fresco' 
                             data-fresco-group='hoody'>
                                 <div class="thumbnail hoody-1"></div>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/hoody-2-large.png' 
+                            <a href='img/hoody-2-large.jpg' 
                             class='fresco' 
                             data-fresco-group='hoody'>
                                 <div class="thumbnail hoody-2"></div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/hoody-3-large.png' 
+                            <a href='img/hoody-3-large.jpg' 
                             class='fresco' 
                             data-fresco-group='hoody'>
                                 <div class="thumbnail hoody-3"></div>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/hoody-4-large.png' 
+                            <a href='img/hoody-4-large.jpg' 
                             class='fresco' 
                             data-fresco-group='hoody'>
                                 <div class="thumbnail hoody-4"></div>
@@ -134,7 +134,7 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/cursive-1-large.png' 
+                            <a href='img/cursive-1-large.jpg' 
                             class='fresco' 
                             data-fresco-group='cursive'>
                                 <div class="thumbnail cursive-1"></div>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/cursive-2-large.png' 
+                            <a href='img/cursive-2-large.jpg' 
                             class='fresco' 
                             data-fresco-group='cursive'>
                                 <div class="thumbnail cursive-2"></div>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/cursive-5-large.png' 
+                            <a href='img/cursive-5-large.jpg' 
                             class='fresco' 
                             data-fresco-group='cursive'>
                                 <div class="thumbnail cursive-5"></div>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/cursive-6-large.png' 
+                            <a href='img/cursive-6-large.jpg' 
                             class='fresco' 
                             data-fresco-group='cursive'>
                                 <div class="thumbnail cursive-6"></div>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/cursive-3-large.png' 
+                            <a href='img/cursive-3-large.jpg' 
                             class='fresco' 
                             data-fresco-group='cursive'>
                                 <div class="thumbnail cursive-3"></div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/cursive-4-large.png' 
+                            <a href='img/cursive-4-large.jpg' 
                             class='fresco' 
                             data-fresco-group='cursive'>
                                 <div class="thumbnail cursive-4"></div>
@@ -198,7 +198,7 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-1-large.png' 
+                            <a href='img/pushpin-1-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-1"></div>
@@ -207,7 +207,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-2-large.png' 
+                            <a href='img/pushpin-2-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-2"></div>
@@ -216,7 +216,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-3-large.png' 
+                            <a href='img/pushpin-3-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-3"></div>
@@ -225,7 +225,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-4-large.png' 
+                            <a href='img/pushpin-4-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-4"></div>
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-5-large.png' 
+                            <a href='img/pushpin-5-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-5"></div>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-6-large.png' 
+                            <a href='img/pushpin-6-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-6"></div>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/pushpin-7-large.png' 
+                            <a href='img/pushpin-7-large.jpg' 
                             class='fresco' 
                             data-fresco-group='pushpin'>
                                 <div class="thumbnail pushpin-7"></div>
@@ -273,7 +273,7 @@
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/itunes-1-large.png' 
+                            <a href='img/itunes-1-large.jpg' 
                             class='fresco' 
                             data-fresco-group='itunes'>
                                 <div class="thumbnail itunes-1"></div>
@@ -283,7 +283,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/itunes-2-large.png' 
+                            <a href='img/itunes-2-large.jpg' 
                             class='fresco' 
                             data-fresco-group='itunes'>
                                 <div class="thumbnail itunes-2"></div>
@@ -301,7 +301,7 @@
                     </div>
                     <div class="col-xs-3 item">
                         <div class="wrapper">
-                            <a href='img/itunes-4-large.png' 
+                            <a href='img/itunes-4-large.jpg' 
                             class='fresco' 
                             data-fresco-group='itunes'>
                                 <div class="thumbnail itunes-4"></div>
