--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <span class="label label-default pull-right">Objective-C</span>
                 <span class="label label-default pull-right">Mobile Design</span>
                 </h2>
-                <p>"Your friendly neighborhood" – Hoody is an app that connects you with deals at restaurants and bars that are just for you and people in your neighborhood. Currently not available on the App Store.</p>
+                <p>&#8220;Your friendly neighborhood&#8221; – Hoody is an app that connects you with deals at restaurants and bars that are just for you and people in your neighborhood. Currently not available on the App Store.</p>
                 <div class="row">
                     <div class="col-xs-3 item">
                         <div class="wrapper">
