--- a/resume/index.html
+++ b/resume/index.html
@@ -59,7 +59,7 @@
                     </ul>
 
                     <p><strong>Apple - iTunes</strong>
-                    <br>February 2010 – November 2011</p>
+                    <br>UI Engineer, February 2010 – November 2011</p>
                     <ul>
                         <li>Developed front end interfaces from wireframes, mockups and other assets, for the worlds largest online music and app store.</li>
                         <li>Maintained an enormous code-base, spanning multiple devices, in 30 languages.</li>
@@ -67,7 +67,7 @@
                     </ul>
 
                     <p><strong>Apple - Global Retail Service</strong>
-                    <br>January 2009 – February 2010</p>
+                    <br>Lead User Interface Designer, January 2009 – February 2010</p>
                     <ul>
                         <li>Led the design of a &#8220;paperless Genius Bar&#8221; allowing for digital signatures and repair tracking.</li>
                         <li>Expertise in user experience analysis, conducting user interviews and human computer interaction.</li>
@@ -75,6 +75,20 @@
                         <li>Projects included iRepair, Apple Online Store Sales and Service and Retail Business Systems.</li>
                     </ul>
                 </section>
+
+                <section>
+                    <h2>Education</h2>
+                    <p><strong>US Marine Corps</strong>
+                    <br>Aviation Technician, 2002 to 2006
+                    <br>MCAS Miramar, CA</p>
+                    <ul>
+                        <li>Graduated Naval Avionics School, NAS Pensacola FL</li>
+                        <li>Graduated F/A-18 Advanced Avionics School, NAS Oceania, VA</li>
+                        <li>Stationed at MCAS Miramar with VMFA-242 and VMFAT-101</li>
+                        <li>Honorable Discharge in 2005 as Corporal, Grade E-4</li>
+                    </ul>
+                </section>
+
 
             </div>
         </div>
