--- a/resume/index.html
+++ b/resume/index.html
@@ -82,14 +82,12 @@
                     <br>Aviation Technician, 2002 to 2006
                     <br>MCAS Miramar, CA</p>
                     <ul>
-                        <li>Graduated Naval Avionics School, NAS Pensacola FL</li>
-                        <li>Graduated F/A-18 Advanced Avionics School, NAS Oceania, VA</li>
-                        <li>Stationed at MCAS Miramar with VMFA-242 and VMFAT-101</li>
-                        <li>Honorable Discharge in 2005 as Corporal, Grade E-4</li>
+                        <li>Graduated Naval Avionics School, NAS Pensacola, FL.</li>
+                        <li>Graduated F/A-18 Advanced Avionics School, NAS Oceania, VA.</li>
+                        <li>Stationed at MCAS Miramar with VMFA-242 and VMFAT-101.</li>
+                        <li>Honorable Discharge in 2005 as Corporal, Grade E-4.</li>
                     </ul>
                 </section>
-
-
             </div>
         </div>
 
