--- a/resume/index.html
+++ b/resume/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/resume.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
