Better noauth mode

--- a/md/index.html
+++ b/md/index.html
@@ -51,7 +51,7 @@
                 </div>
 
             </div>
-            <div class="panel editor" data-editor>
+            <div class="panel editor noauth" data-editor>
                 <div class="toolbar">
                     <p class="pull-left" data-word-count></p>
                     <h5 class="pull-right save-button" data-save-button>Save Version</h5>
