--- a/md/index.html
+++ b/md/index.html
@@ -70,6 +70,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
         <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.4.min.js"></script>
         <script src="js/vendor/Markdown.Converter.js"></script>
+        <script src="js/vendor/Markdown.Extra.js"></script>
         <script src="js/vendor/moment.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
